# habit_tracker_backend

./: .dockerignore  .gitignore  RAILWAY.md  README.md  env.example  pyproject.toml  requirements.txt
app/: __init__.py  config.py  deps.py  mailer.py  main.py  security.py
app/db/: __init__.py  init_db.py  models.py  session.py
app/routers/: auth.py  exercise_entries.py  food_log_entries.py  food_options.py  me.py  users_admin.py  weight_entries.py
app/schemas/: auth.py  exercise_entry.py  food_log_entry.py  food_option.py  profile.py  user_admin.py  weight_entry.py
db/: init_tables.sql  schema.sql
scripts/: run_init_tables.sh
